[gd_scene load_steps=4 format=3 uid="uid://dhl8nrgrbud5b"]

[ext_resource type="Script" path="res://GameTest/testInput.gd" id="1_ryiiv"]
[ext_resource type="Resource" uid="uid://h70ss64xounk" path="res://Data/LevelData/da_level_1.tres" id="2_yf2ml"]
[ext_resource type="PackedScene" uid="uid://crxemnn2nc50h" path="res://Data/PlayerVisuals/player.tscn" id="3_fehom"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ryiiv")
leve_data = ExtResource("2_yf2ml")
metadata/_edit_vertical_guides_ = [288.0]
metadata/_edit_horizontal_guides_ = [512.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 576.0
offset_bottom = 1022.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0.356863, 0.545098, 0.537255, 1)

[node name="GameClick" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_right = 576.0
offset_bottom = 1022.0

[node name="EnemyParent" type="Node2D" parent="."]
position = Vector2(144, 512)

[node name="Player" parent="." instance=ExtResource("3_fehom")]
position = Vector2(446, 469)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 55.0
offset_top = 210.0
offset_right = 521.0
offset_bottom = 237.0
mouse_filter = 2
max_value = 1.0
value = 0.63
show_percentage = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="Node2D" parent="."]

[node name="Label" type="Label" parent="UI"]
offset_left = 446.0
offset_right = 576.0
offset_bottom = 76.0
text = "1 / 8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="UI"]
offset_left = 144.0
offset_top = 23.0
offset_right = 432.0
offset_bottom = 131.0
text = "Test Button Ignore Screen Click"

[connection signal="gui_input" from="GameClick" to="." method="_on_game_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_respawntimer_timeout"]
[connection signal="gui_input" from="UI/Button" to="." method="_on_button_gui_input"]
